--- a/python/src/static/inicio.css
+++ b/python/src/static/inicio.css
@@ -60,6 +60,8 @@ h2 {
 
 .contenedor-tabla {
     margin-top: 20px;
+    overflow-y: auto;
+     max-height: 490px;
 }
 
 table {
@@ -83,6 +85,9 @@ th {
     color: #fff;
     font-weight: bold;
     font-size: 20px;
+    top: 0;
+    z-index: 1;
+    position: sticky;
 }
 
 tbody tr:hover {
