--- a/python/src/templates/resumen_viaje.html
+++ b/python/src/templates/resumen_viaje.html
@@ -16,7 +16,7 @@
 	<p><strong>Comentario:</strong> {{ comentario }}</p>
 
 	<div class="botones">
-        <form action="#" method="post">
+        <form action="/insertar_viaje" method="POST">
             <input type="hidden" name="pais" value="{{ pais }}">
             <input type="hidden" name="ciudad" value="{{ ciudad }}">
             <input type="hidden" name="ida" value="{{ ida }}">
