--- a/python/src/templates/inicio.html
+++ b/python/src/templates/inicio.html
@@ -60,6 +60,6 @@
     </main>
 </body>
 <footer>
-        <p>&copy; 2023 Viajes App</p>
+        <p class="pie-pagina">&copy; 2023 Viajes App</p>
     </footer>
 </html>
