Pequeños cambios (formato fechas en resumen, funcion obtencion codigo ciudad). Funcionalidad insercion viaje con nombre de la imagen subida

--- a/python/src/templates/resumen_viaje.html
+++ b/python/src/templates/resumen_viaje.html
@@ -58,7 +58,7 @@
 
             <button type="submit" class="boton-confirmar">Confirmar</button>
         </form>
-        <a href="/anadir_viaje" class="boton-cancelar">Cancelar</a>
+        <a href="/cancelar_viaje/{{ archivo_imagen }}" class="boton-cancelar">Cancelar</a>
     </div>
 
 </div>
