--- a/python/src/templates/inicio.html
+++ b/python/src/templates/inicio.html
@@ -43,7 +43,7 @@
                             <tr>
                                 <td><a class="codigo-button" href="#">{{ viaje[0] }}</a></td>
                                 <td><a class="ciudad-button" href="/detalle_ciudad/{{ viaje[2] }}">{{ viaje[1] }}</a></td>
-                                <td>{{ viaje[3] }}</td>
+                                <td><a class="pais-button" href="/detalle_pais/{{ viaje[3] }}">{{ viaje[3] }}</a></td>
                                 <td>{{ viaje[4] }}</td>
                             </tr>
                         {% endfor %}
