--- a/python/src/templates/detalle_pais.html
+++ b/python/src/templates/detalle_pais.html
@@ -14,7 +14,7 @@
 	<div class="seccion-detalle-pais">
 			<p>
 				<strong>Bandera:</strong>
-				<p><img src="{{ url_for('static', filename='imagenes_banderas/'+siglas+'.png') }}" alt="Imagen"  width="{{ ancho }}" height="122"></p>
+				<p><img src="{{ url_for('static', filename='imagenes_banderas/'+siglas+'.png') }}" alt="Imagen" height="122"></p>
 			</p>
 	</div>
 	{% endif %}
