--- a/python/src/templates/inicio.html
+++ b/python/src/templates/inicio.html
@@ -41,7 +41,7 @@
                     <tbody>
                         {% for viaje in viajes %}
                             <tr>
-                                <td><a class="codigo-button" href="#">{{ viaje[0] }}</a></td>
+                                <td><a class="codigo-button" href="/detalle_viaje/{{ viaje[0] }}">{{ viaje[0] }}</a></td>
                                 <td><a class="ciudad-button" href="/detalle_ciudad/{{ viaje[2] }}">{{ viaje[1] }}</a></td>
                                 <td><a class="pais-button" href="/detalle_pais/{{ viaje[3] }}">{{ viaje[3] }}</a></td>
                                 <td>{{ viaje[4] }}</td>
