--- a/python/src/templates/detalle_pais.html
+++ b/python/src/templates/detalle_pais.html
@@ -31,7 +31,10 @@
 	</div>
 
 	<div class="seccion-detalle-pais">
-		<p><strong>Ciudades:</strong> {{ ciudades }} ciudades</p>
+		<p>
+			<strong>Ciudades:</strong>
+			<a class="ciudades-pais-button" href="/ciudades_pais/{{ pais }}">{{ ciudades }} ciudades</a>
+		</p>
 	</div>
 
 <div class="contenedor-volver">
