--- a/python/src/templates/inicio.html
+++ b/python/src/templates/inicio.html
@@ -8,6 +8,7 @@
     <script src="{{ url_for('static', filename='formulario.js') }}"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
  <header>
