--- a/python/src/templates/detalle_viaje.html
+++ b/python/src/templates/detalle_viaje.html
@@ -53,9 +53,16 @@
 
 </div>
 
+<div class="seccion-editar-datos">
+    
+    <div class="contenedor-editar">
+        <a href="/editar_viaje/{{ id_viaje }}" class="editar-button">Editar datos</a>
+    </div>
 
-<div class="contenedor-volver">
-    <a href="/" class="volver-button">Volver</a>
+    <div class="contenedor-viaje-volver">
+        <a href="/" class="volver-viaje-button">Volver</a>
+    </div>
+
 </div>
 
 {% endblock principal %}
