Creacion pagina mapa mundial

--- a/python/src/templates/inicio.html
+++ b/python/src/templates/inicio.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/anadir_viaje">Añadir Nuevo Viaje</a></li>
+                <li><a href="/mapa">Mapa Mundial</a></li>
             </ul>
         </nav>
     </header>
