--- a/python/src/templates/inicio.html
+++ b/python/src/templates/inicio.html
@@ -18,6 +18,7 @@
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/anadir_viaje">Añadir Nuevo Viaje</a></li>
                 <li><a href="/mapa">Mapa Mundial</a></li>
+                <li><a href="/estadisticas">Estadisticas</a></li>
             </ul>
         </nav>
     </header>
