Mas estadisticas añadidas a la pagina de estadisticas

--- a/python/src/templates/estadisticas.html
+++ b/python/src/templates/estadisticas.html
@@ -31,6 +31,12 @@
             <p>{{ viajes_ciudad }} viajes a {{ ciudad }} ({{ pais_ciudad }})</p>
         </div>
 
+        <div class="contenedor-estadistica-informacion">
+            <h3>Ciudad Mas Lejana Visitada</h3>
+            <p>{{ ciudad_mas_lejana }} - {{ distancia }} KM</p>
+        </div>
+
+
 
     </div>
 
@@ -66,9 +72,12 @@
             <p>{{ viajes }} viajes en {{ anno }}</p>
         </div>
 
+        <div class="contenedor-estadistica-informacion">
+            <h3>Ciudad Mas Grande Visitada</h3>
+            <p>{{ ciudad_mas_grande }} - {{ poblacion }} habitantes</p>
+        </div>
+
     </div>
-
-
 
     
 </div>
